--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 <body>
 
     <div id="wrap">
-        <h2>날씨 검색</h2>
-        <div class="form"><input type="text" id="city" name="city" value="">
-            <button id="send" onclick="sendbtnEvent()">찾기</button></div>
+        <div class="cover">
+            <h2>날씨 검색</h2>
+            <div class="form"><input type="text" id="city" name="city" value="">
+                <button id="send" onclick="sendbtnEvent()">찾기</button></div>
 
-        <div class="weather">
-            <div>지역: <span id="region"></span></div>
-            <div>기온: <span id="temperature"></span></div>
-            <div>풍속: <span id="wind"></span></div>
-            <div>날씨: <span id="weather"></span></div>
+            <div class="weather">
+                <div>지역: <span id="region"></span></div>
+                <div>기온: <span id="temperature"></span></div>
+                <div>풍속: <span id="wind"></span></div>
+                <div>날씨: <span id="weather"></span></div>
+            </div>
         </div>
-
     </div>
 
 
@@ -31,7 +32,7 @@
 
 
     <script>
-    
+
     </script>
 </body>
 
