--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="wrap">
         <div class="cover">
             <h2>날씨 검색</h2>
+            <div id="time"></div>
             <div class="form"><input type="text" id="city" name="city" value="">
                 <button id="send" onclick="sendbtnEvent()">찾기</button></div>
 
